--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <!-- ===== Navbar ===== -->
 <header class="navbar">
-    <h2 class="logo">KARGA</h2>
+    <h2 class="logo">elnagar</h2>
 
     <nav>
         <a href="#">Home</a>
@@ -61,4 +61,5 @@
 </footer>
 
 </body>
+
 </html>
